--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 	<link rel="stylesheet" href="css/button.css">
 </head>
 <body>
+
 <div class="container">	
 		<header class="header">
+	
+
 					<nav class="content col">
 						<div class="img-logo mt-2 col-3">
 							<img src="img/Logo.png" alt="" class="logo">
@@ -366,7 +369,8 @@
 				
 				</div>
 			
-	
+	  <script type="text/javascript" src="../lesson40/node_modules/jquery/dist/jquery.min.js"></script>
+		
 	
 </body>
 </html>
