--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<title>LAMBDA</title>
 	<meta name="viewport" content="width=device-width,">
-	<link rel="stylesheet" href="css/normalize.css"><link rel="stylesheet" href="node_modules/hamburgers/dist/hamburgers.css">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="node_modules/hamburgers/dist/hamburgers.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/button.css">
 </head>
