--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>LAMBDA</title>
-	<meta name="viewport" content="width=device-width,">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="node_modules/hamburgers/dist/hamburgers.css">
 	<link rel="stylesheet" href="css/style.css">		
