--- a/index.html
+++ b/index.html
@@ -370,6 +370,6 @@
 		</div>
 			
 		
-	<script src="js/index.js"></script>
+	<script src="js/index.js" class="script-snow"></script>
 </body>
 </html>
