--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div class="container">	
+<div class="container">
 		<header class="header">
 					<nav class="content col">
 						<div class="img-logo mt-2 col-2">
@@ -57,13 +57,13 @@
 							<div class="inner-link">
 								<div class="learn-more">
 									<div class="bg-link"><a href="#" class="inner-title">
-										<h1 class="inner2">BOOK A TABLE</h1>
+										<h1 class="inner2"><a href="">BOOK A TABLE</a></h1>
 										</a>
 									</div>
 								</div>
 								<div class="learn-more-2">
 									<div class="bg-link-2"><a href="#" class="inner-title-2">
-										<h1 class="inner2">SEE THE MENU</h1>
+										<h1 class="inner2"><a href="">SEE THE MENU</a></h1>
 										</a>
 									</div>
 								</div>
