--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	
 			<section class="section-abount">
 				<div class="bg-abount">
-					<div class="abount-me">
+					<div class="abount-me col">
 						<h1 class="title-abount">
 							Just the right food
 						</h1>
