--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>LAMBDA</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
 	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/style.css">		
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/button.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
 							<img src="img/Logo.png" alt="" class="logo">
 						</div>
 						<div class="hamburgers mt-2">
-							<button class="hamburger hamburger--elastic-r" type="button"
+							<button class="hamburger hamburger--emphatic" type="button"
 							        aria-label="Menu" aria-controls="navigation">
 							  <span class="hamburger-box">
 							    <span class="hamburger-inner"></span>
@@ -25,20 +25,23 @@
 							</button>
 							<nav id="navigation">
 							  <!--navigation goes here-->
+							  		
 							</nav>
 						</div>
 							<div class="menu col">
-								<ul class="ul">		
-									<li class="link"><a href="#">Home</a></li>
-									<li class="link"><a href="#">About</a></li>
-									<li class="link"><a href="#">Ingredients</a></li>
-									<li class="link"><a href="#">Menu</a></li>
-									<li class="link"><a href="#">Reviews</a></li>
-									<li class="link"><a href="#">Reservations</a></li>
-								</ul>
-								<div class="icon">
-						<i class="fa fa-twitter"></i>
-					</div>
+								<div class="inner-menu">
+									<ul class="ul">		
+										<li class="link"><a href="#">Home</a></li>
+										<li class="link"><a href="#">About</a></li>
+										<li class="link"><a href="#">Ingredients</a></li>
+										<li class="link"><a href="#">Menu</a></li>
+										<li class="link"><a href="#">Reviews</a></li>
+										<li class="link"><a href="#">Reservations</a></li>
+									</ul>
+									<div class="icon">
+															<i class="fa fa-twitter"></i>
+														</div>
+								</div>
 								</div>
 				
 							</nav>
@@ -370,6 +373,16 @@
 		</div>
 			
 		
-	<script src="js/index.js" class="script-snow"></script>
+	<!-- <script src="js/index.js" class="script-snow"></script> -->
+	<script>
+  // Look for .hamburger
+  var hamburger = document.querySelector(".hamburger");
+  // On click
+  hamburger.addEventListener("click", function() {
+    // Toggle class "is-active"
+    hamburger.classList.toggle("is-active");
+    // Do something else, like open/close menu
+  });
+</script>
 </body>
 </html>
